--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@emotion/styled": "^11.6.0",
     "@mdx-js/loader": "^1.6.22",
     "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.2",
+    "@mui/styles": "^5.2.2",
     "@next/mdx": "^12.0.6",
+    "cookies-next": "^2.0.3",
     "gray-matter": "^4.0.3",
     "marked": "^4.0.6",
     "next": "12.0.4",
