--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-mdx-remote": "^3.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-syntax-highlighter": "^15.4.5"
+    "react-syntax-highlighter": "^15.4.5",
+    "remark-toc": "^8.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
