--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styles": "^5.2.2",
     "@next/mdx": "^12.0.6",
     "cookies-next": "^2.0.3",
+    "fuse.js": "^6.4.6",
     "gray-matter": "^4.0.3",
     "marked": "^4.0.6",
     "next": "12.0.4",
