--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@mui/styles": "^5.2.2",
     "@next/mdx": "^12.0.6",
     "cookies-next": "^2.0.3",
+    "firebase": "^9.6.1",
     "fuse.js": "^6.4.6",
     "gray-matter": "^4.0.3",
+    "js-cookie": "^3.0.1",
     "marked": "^4.0.6",
     "next": "12.0.4",
     "next-mdx-remote": "^3.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebaseui": "^6.0.0",
     "react-syntax-highlighter": "^15.4.5",
     "remark-toc": "^8.0.1"
   },
