--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "12.0.4",
     "next-mdx-remote": "^3.0.8",
     "next-sitemap": "^1.6.203",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebaseui": "^6.0.0",
