Pre-requisite post

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.0",
+    "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/loader": "^0.15.4",
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.59",
+    "@mui/material": "^5.2.6",
+    "@mui/styled-engine": "^5.2.6",
     "@mui/styles": "^5.2.2",
     "@next/mdx": "^12.0.6",
     "cookies-next": "^2.0.3",
@@ -22,9 +24,10 @@
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.1",
     "marked": "^4.0.6",
-    "next": "12.0.4",
+    "next": "^12.0.7",
     "next-mdx-remote": "^3.0.8",
     "next-sitemap": "^1.6.203",
+    "next-transpile-modules": "^9.0.0",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
