--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fuse.js": "^6.4.6",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.1",
+    "jspdf": "^2.5.0",
     "marked": "^4.0.6",
     "next": "^12.0.7",
     "next-mdx-remote": "^3.0.8",
@@ -33,6 +34,7 @@
     "react-dom": "17.0.2",
     "react-firebaseui": "^6.0.0",
     "react-syntax-highlighter": "^15.4.5",
+    "react-to-print": "^2.14.3",
     "remark-toc": "^8.0.1"
   },
   "devDependencies": {
