--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookies-next": "^2.0.3",
     "firebase": "^9.6.1",
     "fuse.js": "^6.4.6",
+    "googleapis": "^92.0.0",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.1",
     "jspdf": "^2.5.0",
