--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine": "^5.2.6",
     "@mui/styles": "^5.2.2",
     "@next/mdx": "^12.0.6",
+    "@sendgrid/mail": "^7.6.0",
     "cookies-next": "^2.0.3",
     "firebase": "^9.6.1",
     "fuse.js": "^6.4.6",
