Added reseller authority letter

--- a/package.json
+++ b/package.json
@@ -40,5 +40,18 @@
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "version": "1.0.0",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sakilmurad/gem.git"
+  },
+  "author": "Sakil",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sakilmurad/gem/issues"
+  },
+  "homepage": "https://github.com/sakilmurad/gem#readme"
 }
