--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-firebaseui": "^6.0.0",
     "react-syntax-highlighter": "^15.4.5",
     "react-to-print": "^2.14.3",
+    "react-web-share": "^1.1.6",
     "remark-toc": "^8.0.1"
   },
   "devDependencies": {
